api-services/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-services-deploy #The name of the Kubernetes Deployment to be created in the Kubernetes cluster
  labels:
    app: api-services
spec:
  replicas: 2 #The number of pods to be created in the Kubernetes cluster for the api services application container
  selector:
    matchLabels:
      app: api-services
  template:
    metadata:
      labels:
        app: api-services
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: api-services #The name of the react.js application container
          image: anjannandy/startup-api-services #The Docker image for building the api-services application container
          ports:
            - containerPort: 8080 #The port for the React.js application   container

---

apiVersion: v1
kind: Service
metadata:
  name: api-services-cluster-srv
spec:
  selector:
    app: api-services
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-services-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-services-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - api-services-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api-services-cluster-srv
            port:
              number: 80
